Completes user story 1

--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,1 +1,7 @@
-<h1><%= @machine.location %> Vending Machine</h1>
+<% @machines.each do |machine| %>
+  <h1><%= @machine.location %> Vending Machine</h1>
+  <%= @snacks.each do |snack| %>
+    <p>Name: <%= snack.name %></p>
+    <p>Price: <%= number_to_currency(snack.price) %> </p>
+  <% end  %>
+<% end %>
