Works on user story 2

--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -4,4 +4,5 @@
     <p>Name: <%= snack.name %></p>
     <p>Price: <%= number_to_currency(snack.price) %> </p>
   <% end  %>
+  <p>Average Price: <%= number_to_currency(@machine.avg_price) %></p>
 <% end %>
