--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,6 +1,5 @@
 <h1><%= @machine.location %> Vending Machine</h1>
   <%= @snacks.each do |snack| %>
-    <p>Name: <%= snack.name %></p>
-    <p>Price: <%= number_to_currency(snack.price) %> </p>
+    <p><%= snack.name %>: <%= number_to_currency(snack.price) %> </p>
   <% end  %>
 <p>Average Price: <%= number_to_currency(@machine.avg_price) %></p>
